packages/lustre-v6.6.103.3/test/should_fail/semantics/const3.lus
const pi = 3.1416;
const right = pi/2.;

node const3 = Lustre::and